Hamburger menu: simplified js; removed animation; now it closes if user clicks an option or clicks outside the menu; fixed the z-index issue that was causing it to be overlaid by the The Plan section.

--- a/css/main.css
+++ b/css/main.css
@@ -468,6 +468,7 @@ span.linky {
     padding: 1rem;
     margin: 0;
     border: 1px solid black;
+    z-index: inherit;
 }
 
 @media screen and (hover) {
