--- a/css/menu.css
+++ b/css/menu.css
@@ -22,14 +22,16 @@ nav {display: none;}
     position: fixed;
     top: 3vw;
     right: 3vw;
-    z-index: 4;
+    z-index: 7;
 }    
 
 #menu {
     position: fixed;
-    z-index: 5;
+    z-index: 8;
     padding: 20px;
-    right: -300px;
+    right: 0;
+    top: 0;
+    display: none;
 }    
 
 #menu span {
